[package]
name = "zoolander-ci"
version = "0.1.0"
authors = ["Robert D French <robert@robertdfrench.me>"]
edition = "2018"

[dependencies]
libc = { git = "https://github.com/rust-lang/libc.git", branch = "master" }
fastcgi = "1.0.0"
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"
